name:            persistent-redis
version:         2.13.0.1
license:         BSD3
license-file:    LICENSE
author:          Pavel Ryzhov <paul@paulrz.cz>
synopsis:        Backend for persistent library using Redis.
description:     Based on the Redis package.
category:        Database
stability:       Experimental
cabal-version:   >= 1.10
maintainer:      Pavel Ryzhov <paul@paulrz.cz>
build-type:      Simple
bug-reports:     https://github.com/yesodweb/persistent/issues

source-repository head
        type:           git
        location:       https://github.com/yesodweb/persistent.git

library
    build-depends:   base                  >= 4.9        && < 5
                   , persistent            >= 2.12      && < 3.0
                   , aeson                 >= 1.0
                   , binary                >= 0.8      && < 0.9
                   , bytestring            >= 0.10.8   && < 0.12
                   , hedis                 >= 0.9
                   , http-api-data
                   , mtl                   >= 2.2.1    && < 2.3
                   , path-pieces           >= 0.2
                   , scientific            >= 0.3.5    && < 0.4
                   , text                  >= 1.2
                   , time                  >= 1.6
                   , transformers          >= 0.5         && < 0.6
                   , utf8-string           >= 1.0         && < 1.1

    exposed-modules: Database.Persist.Redis

    other-modules:   Database.Persist.Redis.Config
                     Database.Persist.Redis.Exception
                     Database.Persist.Redis.Internal
                     Database.Persist.Redis.Parser
                     Database.Persist.Redis.Store
                     Database.Persist.Redis.Update

    ghc-options:     -Wall
    default-language: Haskell2010

test-suite  basic
    type: exitcode-stdio-1.0
    main-is: tests/basic-test.hs
    build-depends:   base                  
                   , persistent            
                   , persistent-redis
                   , aeson                 
                   , bytestring            
                   , binary                
                   , hedis                 
                   , http-api-data
                   , mtl                   
                   , path-pieces           
                   , scientific
                   , template-haskell
                   , text                  
                   , time                  
                   , transformers          
                   , utf8-string           

    other-modules:   Database.Persist.Redis
                     Database.Persist.Redis.Config
                     Database.Persist.Redis.Internal
                     Database.Persist.Redis.Store
                     Database.Persist.Redis.Parser
                     Database.Persist.Redis.Update
                     Database.Persist.Redis.Exception
    default-language: Haskell2010
