name:            persistent-template
version:         2.5.1.4
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>, Greg Weber <greg@gregweber.info>
synopsis:        Type-safe, non-relational, multi-backend persistence.
description:     Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/persistent-template>.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
extra-source-files: test/main.hs ChangeLog.md README.md

library
    build-depends:   base                     >= 4.6         && < 5
                   , template-haskell
                   , persistent               >= 2.5       && < 3
                   , monad-control            >= 0.2       && < 1.1
                   , bytestring               >= 0.9
                   , text                     >= 0.5
                   , transformers             >= 0.2       && < 0.6
                   , containers
                   , aeson                    >= 0.7       && < 0.12
                   , aeson-compat             >= 0.3.2.0   && < 0.4
                   , monad-logger
                   , unordered-containers
                   , tagged
                   , path-pieces
                   , http-api-data            >= 0.2       && < 0.3
                   , ghc-prim
    exposed-modules: Database.Persist.TH
    ghc-options:     -Wall
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       main.hs
    hs-source-dirs: test

    build-depends:   base >= 4.6 && < 5
                   , persistent-template
                   , aeson
                   , hspec >= 1.3
                   , text
                   , persistent
                   , bytestring
                   , QuickCheck
                   , transformers

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
