name:            persistent-test
version:         2.0.3.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Tests for Persistent
description:     Tests for Persistent. This is only for use in developing libraries that should conform to the persistent interface, not for users of the persistent suite of database libraries.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.10
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues

library
    exposed-modules: CompositeTest
                     CustomPersistField
                     CustomPersistFieldTest
                     CustomPrimaryKeyReferenceTest
                     DataTypeTest
                     EmbedTest
                     EmbedOrderTest
                     EmptyEntityTest
                     EntityEmbedTest
                     EquivalentTypeTest
                     HtmlTest
                     Init
                     LargeNumberTest
                     MaxLenTest
                     MigrationColumnLengthTest
                     MigrationIdempotencyTest
                     MigrationOnlyTest
                     MigrationTest
                     MpsNoPrefixTest
                     PersistentTest
                     PersistentTestModels
                     PersistTestPetType
                     PersistTestPetCollarType
                     PersistUniqueTest
                     PrimaryTest
                     RawSqlTest
                     ReadWriteTest
                     RenameTest
                     Recursive
                     SumTypeTest
                     TransactionLevelTest
                     TreeTest
                     UniqueTest
                     UpsertTest

    hs-source-dirs: src

    build-depends:   base                     >= 4.9       && < 5
                   , persistent
                   , persistent-template
                   , aeson                    >= 1.0
                   , blaze-html               >= 0.9
                   , bytestring               >= 0.10
                   , conduit                  >= 1.2.12
                   , containers               >= 0.5
                   , exceptions               >= 0.8
                   , hspec                    >= 2.4
                   , hspec-expectations
                   , HUnit
                   , monad-control
                   , monad-logger             >= 0.3.25
                   , path-pieces              >= 0.2
                   , QuickCheck               >= 2.9
                   , quickcheck-instances     >= 0.3
                   , random                   >= 1.1
                   , resourcet                >= 1.1
                   , text                     >= 1.2
                   , time                     >= 1.6
                   , transformers             >= 0.5
                   , transformers-base
                   , unliftio
                   , unliftio-core
                   , unordered-containers

  default-language: Haskell2010
  default-extensions:
                    ExistentialQuantification
                    FlexibleContexts
                    FlexibleInstances
                    MultiParamTypeClasses
                    OverloadedStrings
                    QuasiQuotes
                    TemplateHaskell
                    TypeFamilies
                    StandaloneDeriving
                    DerivingStrategies
                    GeneralizedNewtypeDeriving

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
