name:            persistent-zookeeper
version:         0.2.0
license:         BSD3
license-file:    LICENSE
author:          Junji Hashimoto <junji.hashimoto@gree.net>
synopsis:        Backend for persistent library using Zookeeper.
description:     Based on the Zookeeper package.
category:        Database
stability:       Experimental
cabal-version:   >= 1.8
maintainer:      Junji Hashimoto <junji.hashimoto@gree.net>
build-type:      Simple

source-repository head
        type:           git
        location:       https://github.com/junjihashimoto/persistent.git

library
    build-depends:   base                  >= 4        && < 5
                   , bytestring            >= 0.10.0.0 && < 0.11.0.0
                   , persistent            >= 2.1
                   , persistent-template
                   , template-haskell
                   , text                  >= 0.8
                   , aeson                 >= 0.5
                   , time                  >= 1.4      && < 1.5
                   , attoparsec
                   , mtl
                   , transformers
                   , transformers-base
                   , monad-control
                   , utf8-string           >= 0.3.7    && < 0.4.0
                   , binary                >= 0.7      && < 0.8
                   , scientific
                   , hzk                   >= 2.1
                   , resource-pool
                   , path-pieces
                   , template-haskell
                   , base64-bytestring
                   , conduit
                   , containers
                   , resourcet
                   , binary

    exposed-modules: Database.Persist.Zookeeper

    other-modules:   Database.Persist.Zookeeper.Config
                     Database.Persist.Zookeeper.Internal
                     Database.Persist.Zookeeper.Store
                     Database.Persist.Zookeeper.Unique
                     Database.Persist.Zookeeper.Query
                     Database.Persist.Zookeeper.ZooUtil
                     Database.Persist.Zookeeper.Binary

    ghc-options:     -Wall

test-suite  basic
    type: exitcode-stdio-1.0
    main-is: tests/basic-test.hs
    build-depends:   base                  >= 4        && < 5
                   , persistent            >= 2.1
                   , persistent-template
                   , mtl
                   , transformers
                   , transformers-base
                   , bytestring            >= 0.10.0.0 && < 0.11.0.0
                   , text                  >= 0.8
                   , aeson                 >= 0.5
                   , binary                >= 0.7      && < 0.8
                   , time                  >= 1.4      && < 1.5
                   , attoparsec
                   , template-haskell
                   , monad-control
                   , utf8-string           >= 0.3.7    && < 0.4.0
                   , persistent-zookeeper
                   , scientific
                   , hzk                   >= 2.1
                   , resource-pool
                   , path-pieces
                   , base64-bytestring
                   , hspec
                   , conduit
                   , containers
                   , resourcet

--    ghc-options:     -Wall -ddump-splices
    ghc-options:     -Wall
