name:            persistent
version:         2.9.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>, Greg Weber <greg@gregweber.info>
synopsis:        Type-safe, multi-backend data serialization.
description:     Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/persistent>.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues
extra-source-files: ChangeLog.md README.md

flag nooverlap
    default: False
    description: test out our assumption that OverlappingInstances is just for String

library
    if flag(nooverlap)
        cpp-options: -DNO_OVERLAP

    build-depends:   base                     >= 4.7       && < 5
                   , bytestring               >= 0.9
                   , transformers             >= 0.2.1
                   , time                     >= 1.1.4
                   , old-locale
                   , text                     >= 0.8
                   , containers               >= 0.2
                   , conduit                  >= 1.2.8
                   , resourcet                >= 1.1.10
                   , resource-pool            >= 0.2.2.0
                   , path-pieces              >= 0.1
                   , http-api-data            >= 0.2       && < 0.4
                   , aeson                    >= 0.5
                   , monad-logger             >= 0.3.28
                   , base64-bytestring
                   , unordered-containers
                   , vector
                   , attoparsec
                   , template-haskell
                   , blaze-html               >= 0.5
                   , blaze-markup             >= 0.5.1
                   , silently
                   , mtl
                   , fast-logger              >= 2.1
                   , scientific
                   , tagged
                   , unliftio-core
                   , void

    exposed-modules: Database.Persist
                     Database.Persist.Quasi

                     Database.Persist.Types
                     Database.Persist.Class
                     Database.Persist.Sql
                     Database.Persist.Sql.Util
                     Database.Persist.Sql.Types.Internal

    other-modules:   Database.Persist.Types.Base
                     Database.Persist.Class.DeleteCascade
                     Database.Persist.Class.PersistEntity
                     Database.Persist.Class.PersistQuery
                     Database.Persist.Class.PersistUnique
                     Database.Persist.Class.PersistConfig
                     Database.Persist.Class.PersistField
                     Database.Persist.Class.PersistStore

                     Database.Persist.Sql.Migration
                     Database.Persist.Sql.Internal
                     Database.Persist.Sql.Types
                     Database.Persist.Sql.Raw
                     Database.Persist.Sql.Run
                     Database.Persist.Sql.Class
                     Database.Persist.Sql.Orphan.PersistQuery
                     Database.Persist.Sql.Orphan.PersistStore
                     Database.Persist.Sql.Orphan.PersistUnique

    ghc-options:     -Wall

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       test/main.hs

    build-depends:   base >= 4.8 && < 5
                   , hspec >= 1.3
                   , containers
                   , text
                   , unordered-containers
                   , time
                   , old-locale
                   , bytestring
                   , vector
                   , base64-bytestring
                   , attoparsec
                   , transformers
                   , path-pieces
                   , http-api-data            >= 0.2       && < 0.4
                   , aeson
                   , resourcet
                   , monad-logger
                   , conduit
                   , monad-control
                   , blaze-html
                   , scientific
                   , tagged
                   , fast-logger              >= 2.1
                   , mtl
                   , template-haskell
                   , resource-pool

    cpp-options: -DTEST

    other-modules:   Database.Persist.Class.PersistEntity
                     Database.Persist.Class.PersistField
                     Database.Persist.Quasi
                     Database.Persist.Types
                     Database.Persist.Types.Base

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
